# crepuscular-archipelago

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  deno.json  next.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json
.github/workflows/: BuildWebsite.yml  build.yml  deno.yml
backend/: Cargo.toml  archipelago.sqlite3
backend/src/: env.rs  fs.rs  git.rs  http.rs  main.rs  memorize.rs  model.rs  schedule.rs  search.rs  sql.rs
backend/src/fs/: mod.rs
backend/src/http/: mod.rs
backend/src/model/: mod.rs
backend/src/sql/: mod.rs
backend/storage/: README.md  archipelago.sqlite3  memorize.sqlite3  memorize_validator.json
backend/storage/islands/: 梦开始的地方.md
backend/storage/islands/1/: 梦开始的地方.md
backend/storage/islands/10/: krenz_perspL1A01.md
backend/storage/islands/11/: krenz_perspL1B02.md
backend/storage/islands/12/: krenz_perspL2A01.md
backend/storage/islands/13/: krenz_perspL2A02B.md
backend/storage/islands/14/: note.asm.md
backend/storage/islands/15/: 达成成就：18岁啦.md
backend/storage/islands/16/: Aurora-2.md  Aurora-3.md
backend/storage/islands/17/: krenz_perspL3.md
backend/storage/islands/18/: krenz_perspL4A01.md
backend/storage/islands/19/: krenz_perspL8.md
backend/storage/islands/2/: 解锁技能.md
backend/storage/islands/20/: Aurora-3.md  Aurora-4.md
backend/storage/islands/21/: fk-trig.md
backend/storage/islands/22/: practice.md
backend/storage/islands/23/: Aurora-4.md  Aurora-5.md
backend/storage/islands/24/: krenz-comp.md
backend/storage/islands/25/: rezero-ta.md
backend/storage/islands/3/: Bevy基础渲染（0.13）.md
backend/storage/islands/4/: 第一个百星仓库.md
backend/storage/islands/5/: 噪声.md
backend/storage/islands/6/: Aurora-0.md  实时阴影.md
backend/storage/islands/7/: Aurora-1.md
backend/storage/islands/8/: Aurora-2.md
backend/storage/islands/9/: 背包问题的题目归纳.md
backend/storage/json/: link_exchange_list.json  projects.json
ci/: build.sh
public/: bookmarks.json  chicken-soups.json  emoticons.json  pixiv-weekly.json  projects.json  self-intro.md  self-titles.json  sp-targets.json
src-backend/: Cargo.toml
src-backend/src/: env.rs  filter.rs  fs.rs  http.rs  islands.rs  main.rs  model.rs  models.rs  preprocess.rs  sql.rs
src-deployer/: Cargo.toml
src-deployer/src/: jobs.rs  main.rs  utils.rs
src-media/: memorize.sqlite3
src-tools/: media_sync.py
src/app/: favicon.kra  global.css  globals.css  layout.tsx  motion-titles.tsx  motion-verbs.tsx  not-found.tsx  page.tsx
src/components/: blog-info.tsx  checkbox-group.tsx  checkbox.tsx  content-wrapper.tsx  corner-deco-box.tsx  end-deco-line.tsx  footer.tsx  giscus-section.tsx  (+33 more)
storage/: archipelago.sqlite3
(+241 files in other folders)
