[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11"
futures = "0.3.30"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
