[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5"
aes = "0.8"
async-stream = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11"
futures = "0.3.30"
image = "0.25"
log = "0.4"
noise = { version = "0.9", features = ["images"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
