[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
clokwerk = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
futures-lite = "2"
image = "0.25"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
zip = "2"
